	
	* iplib.py, hooks.py: Added configurable input prefilter,
	named 'input_prefilter'. See ext_rescapture.py for example
	usage.
	
	* ext_rescapture.py, Magic.py: Better system command output capture
	through 'var = !ls' (deprecates user-visible %sc). Same notation
	applies for magics, 'var = %alias' assigns alias list to var.
	
	* ipapi.py: added meta() for accessing extension-usable data store.

2006-01-25  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/demo.py (Demo.show): Flush stdout after each block, so
	computationally intensive blocks don't appear to stall the demo.

2006-01-24  Ville Vainio  <vivainio@gmail.com>  

	* iplib.py, hooks.py: 'result_display' hook can return a non-None
	value to manipulate resulting history entry.
	
	* ipapi.py: Moved TryNext here from hooks.py. Moved functions
	to instance methods of IPApi class, to make extending an embedded  
	IPython feasible. See ext_rehashdir.py for example usage.
	
	* Merged 1071-1076 from banches/0.7.1


2006-01-23  Fernando Perez  <Fernando.Perez@colorado.edu>

	* tools/release (daystamp): Fix build tools to use the new
	eggsetup.py script to build lightweight eggs.

	* Applied changesets 1062 and 1064 before 0.7.1 release.
	
	* IPython/Magic.py (magic_history): Add '-r' option to %hist, to
	see the raw input history (without conversions like %ls ->
	ipmagic("ls")).  After a request from W. Stein, SAGE
	(http://modular.ucsd.edu/sage) developer.  This information is
	stored in the input_hist_raw attribute of the IPython instance, so
	developers can access it if needed (it's an InputList instance).
	
	* Versionstring = 0.7.2.svn
	
	* eggsetup.py: A separate script for constructing eggs, creates
	proper launch scripts even on Windows (an .exe file in 
	\python24\scripts).
	
	* ipapi.py: launch_new_instance, launch entry point needed for the 
	egg.

2006-01-23  Ville Vainio  <vivainio@gmail.com>  

	* Added %cpaste magic for pasting python code

2006-01-22  Ville Vainio  <vivainio@gmail.com>  
